updated API Reference
