# docs/swagger.json
@@ -506,6 +506,46 @@
                 }
             }
         },
+        "/bucket/query": {
+            "get": {
+                "description": "Query the Sonr Blockchain for all public buckets by a specified creator.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Proxy"
+                ],
+                "summary": "QueryBuckets",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "creator",
+                        "name": "creator",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "pagination",
+                        "name": "pagination",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/routes.BucketResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/routes.FailedResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/bucket/update-items": {
             "post": {
                 "description": "Update a bucket on Sonr using the bucket module of Sonr's Blockchain.",
@@ -768,7 +808,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Schema"
+                    "Schema Document"
                 ],
                 "summary": "CreateSchemaDocument",
                 "parameters": [
@@ -839,7 +879,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Schema"
+                    "Schema Document"
                 ],
                 "summary": "GetSchemaDocument",
                 "parameters": [
@@ -961,7 +1001,7 @@
                 }
             }
         },
-        "/schema/query": {
+        "/schema/get-from-creator": {
             "get": {
                 "description": "Query the Sonr Blockchain for all public schemas on the Blockchain. This is a read-only endpoint.",
                 "produces": [
@@ -969,6 +1009,32 @@
                 ],
                 "tags": [
                     "Schema"
+                ],
+                "summary": "QueryWhatIsByCreator",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/routes.SchemaResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/routes.FailedResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/schema/query": {
+            "get": {
+                "description": "Query the Sonr Blockchain for all public schemas on the Blockchain. This is a read-only endpoint.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Proxy"
                 ],
                 "summary": "QuerySchemas",
                 "responses": {
@@ -1009,6 +1075,49 @@
         "object.Object": {
             "type": "object",
             "additionalProperties": true
+        },
+        "routes.BucketResponse": {
+            "description": "Query the Sonr Blockchain for all public buckets on the Blockchain. This is a read-only endpoint.",
+            "type": "object",
+            "properties": {
+                "where_is": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "properties": {
+                            "content": {
+                                "type": "array",
+                                "items": {}
+                            },
+                            "content_acl": {
+                                "type": "array",
+                                "items": {}
+                            },
+                            "creator": {
+                                "type": "string"
+                            },
+                            "did": {
+                                "type": "string"
+                            },
+                            "is_active": {
+                                "type": "boolean"
+                            },
+                            "label": {
+                                "type": "string"
+                            },
+                            "role": {
+                                "type": "string"
+                            },
+                            "timestamp": {
+                                "type": "string"
+                            },
+                            "visibility": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
         },
         "routes.ConvertBucketRes": {
             "type": "object",
@@ -1140,6 +1249,26 @@
                                     },
                                     "did": {
                                         "type": "string"
+                                    },
+                                    "fields": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "object",
+                                            "properties": {
+                                                "field": {
+                                                    "type": "string"
+                                                },
+                                                "link": {
+                                                    "type": "string"
+                                                },
+                                                "link_kind": {
+                                                    "type": "string"
+                                                },
+                                                "name": {
+                                                    "type": "string"
+                                                }
+                                            }
+                                        }
                                     },
                                     "label": {
                                         "type": "string"
